# dumbo

./: .gitignore  CLAUDE.md  PLUGIN_GUIDE.md  README.txt  pyproject.toml  test_setup.py
examples/llama3/: 8b-lora.yml
examples/smollm/: .lora_example.yaml.swp  lora_example.yaml  small.yaml
examples/tinystories_ci/: 1m_sft.yaml  1m_sft_with_wandb.yaml
src/dumbo/: .__init__.py.swp  __constants__.py  __init__.py  __main__.py  logger.py  metrics.py  plugin_loader.py  result.py
src/dumbo/plugins/: jinja_formatter.py  liger.py  peft.py  polars.py  transformers.py  transformers_trainer.py  trl.py  wandb.py
src/dumbo/plugins/transformers_trainer/: __init__.py  metrics_adapter.py
