[project]
name = "dumbo"
version = "0.0.1-rc"
description = "Add your description here"
readme = "README.md"
requires-python = "<3.12, >=3.9"
dependencies = [
    "msgspec>=0.19.0",
    "pyyaml>=6.0.2",
    "simple-parsing>=0.1.7",
    "torch>=2.7.1",
    "unsloth>=2024.8",
    "transformers>=4.40.0",
    "datasets>=2.19.0",
    "trl>=0.8.6",
    "polars>=1.0.0",
    "jinja2>=3.1.0",
    "liger-kernel>=0.2.0",
]

[project.scripts]
dumbo = "dumbo:real_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
