[project]
name = "dumbo"
version = "0.0.1-rc"
description = "a modular-by-design llm (and more!) trainer"
readme = "README.txt"
requires-python = "<3.12, >=3.9"
dependencies = [
    "msgspec>=0.19.0",
    "pyyaml>=6.0.2",
    "simple-parsing>=0.1.7",
    "liger-kernel>=0.2.0",
]

[project.optional-dependencies]
torch = [
    "torch>=2.7.1"
]
huggingface = [
    "transformers>=4.40.0",
    "datasets>=2.19.0",
    "trl>=0.8.6",
]
polars = [
    "polars>=1.0.0",
    "datasets>=2.19.0",
]
jinja = [
    "jinja2>=3.1.0",
]
peft = [
    "peft>=0.16.0"
]
default = [
    "dumbo[torch]",
    "dumbo[huggingface]",
    "dumbo[polars]",
    "dumbo[jinja]",
    "dumbo[peft]"
]

[project.scripts]
dumbo = "dumbo:real_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
